set home page height using css rather than javscript to avoid flickering on load

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1000,8 +1000,11 @@ ul.social-buttons li {
 
 }
 #headerimg {
-    position:relative;
-    padding-bottom:55px;
+    position: relative;
+    height: 100vh;
+    height: 100svh;
+    padding-bottom: 55px;
+    box-sizing: border-box;
 }
 
 @media (max-width:405px) {
